[package]
name = "Algorithims"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
graphviz-rust = "0.6.6"
